--- a/playbook.yml
+++ b/playbook.yml
@@ -1,17 +1,22 @@
 - hosts: all
   sudo: true
+
+  vars_files:
+    - vars/vars.yml
+
   tasks:
-    - name: update yum packages
-      yum: name=* state=latest
-    - name: Install Dependencies
-      yum: pkg={{ item }}
-      with_items:
-        - gcc
-        - make
-    - name: install Git
-      yum: name=git state=present
-    - name: install Ruby
-      yum: name=ruby state=present
+    #- name: update yum packages
+      #yum: name=* state=latest
+    #- name: Install Dependencies
+      #yum: pkg={{ item }}
+      #with_items:
+        #- gcc
+        #- make
+    #- name: install Git
+      #yum: name=git state=present
+    #- name: install Ruby
+      #yum: name=ruby state=present
   roles:
-    - {role: nodejs, nodejs_version: 5.3.0}
-    - role: vim
+    - role: user
+    - role: nodejs
+    #- role: vim
