playbook fix - uncommenting

--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -9,12 +9,12 @@
     - include: handlers.yml
 
   roles:
-    # - role: common
-    # - role: git
-    # - role: vim
+    - role: common
+    - role: git
+    - role: vim
     - role: nodejs
     # - role: nginx
-    # - role: tools
-    # - role: docker
-    # - role: docker-images
+    - role: tools
+    - role: docker
+    - role: docker-images
 #   - role: mysql
